selforg/build_test4.log
g++ -c -Wall -pipe -fpic -I./. -I./controller -I./wirings -I./utils -I./matrix -I./statistictools -I./statistictools/measure -I./statistictools/dataanalysation -Iinclude -Iinclude/selforg -std=c++17 -pthread -I/Users/jerry/lpzrobots/include -I/opt/homebrew/Cellar/gsl/2.8/include -DNOCONFIGURATOR -g -O  -o "build/./agent.o" "agent.cpp"
In file included from agent.cpp:25:
In file included from ./agent.h:37:
./utils/trackrobots.h:66:42: error: static member function cannot have 'const' qualifier
   66 |   static TrackRobotConf getDefaultConf() const {
      |                                          ^~~~~
./utils/trackrobots.h:68:10: error: no member named 'trackPos' in 'TrackRobotConf'
   68 |     conf.trackPos = true;
      |     ~~~~ ^
./utils/trackrobots.h:69:10: error: no member named 'trackSpeed' in 'TrackRobotConf'
   69 |     conf.trackSpeed = false;
      |     ~~~~ ^
./utils/trackrobots.h:70:10: error: no member named 'trackOrientation' in 'TrackRobotConf'
   70 |     conf.trackOrientation = false;
      |     ~~~~ ^
./utils/trackrobots.h:72:10: error: no member named 'displayTraceDur' in 'TrackRobotConf'; did you mean 'displayTrace'?
   72 |     conf.displayTraceDur = 60;
      |          ^~~~~~~~~~~~~~~
      |          displayTrace
./utils/trackrobots.h:41:8: note: 'displayTrace' declared here
   41 |   bool displayTrace = false;
      |        ^
./utils/trackrobots.h:73:10: error: no member named 'displayTraceThickness' in 'TrackRobotConf'
   73 |     conf.displayTraceThickness = 0.0;
      |     ~~~~ ^
./utils/trackrobots.h:74:10: error: no member named 'interval' in 'TrackRobotConf'
   74 |     conf.interval = 1;
      |     ~~~~ ^
./utils/trackrobots.h:75:10: error: no member named 'writeFile' in 'TrackRobotConf'
   75 |     conf.writeFile = true;
      |     ~~~~ ^
./utils/trackrobots.h:78:10: error: no member named 'autoFilename' in 'TrackRobotConf'
   78 |     conf.autoFilename = true;
      |     ~~~~ ^
./utils/trackrobots.h:100:10: error: no member named 'trackPos' in 'TrackRobotConf'
  100 |     conf.trackPos = trackPos;
      |     ~~~~ ^
./utils/trackrobots.h:101:10: error: no member named 'trackSpeed' in 'TrackRobotConf'
  101 |     conf.trackSpeed = trackSpeed;
      |     ~~~~ ^
./utils/trackrobots.h:102:10: error: no member named 'trackOrientation' in 'TrackRobotConf'
  102 |     conf.trackOrientation = trackOrientation;
      |     ~~~~ ^
./utils/trackrobots.h:104:10: error: no member named 'interval' in 'TrackRobotConf'
  104 |     conf.interval = interval;
      |     ~~~~ ^
./utils/trackrobots.h:121:17: error: no member named 'trackPos' in 'TrackRobotConf'
  121 |     return conf.trackPos || conf.trackOrientation || conf.trackSpeed;
      |            ~~~~ ^
./utils/trackrobots.h:121:34: error: no member named 'trackOrientation' in 'TrackRobotConf'
  121 |     return conf.trackPos || conf.trackOrientation || conf.trackSpeed;
      |                             ~~~~ ^
./utils/trackrobots.h:121:59: error: no member named 'trackSpeed' in 'TrackRobotConf'
  121 |     return conf.trackPos || conf.trackOrientation || conf.trackSpeed;
      |                                                      ~~~~ ^
In file included from agent.cpp:31:
./abstractrobot.h:83:38: error: 'getSensorInfos' marked 'override' but does not override any member functions
   83 |   virtual std::list<SensorMotorInfo> getSensorInfos()
      |                                      ^
./abstractrobot.h:89:3: error: 'virtual' can only appear on non-static member functions
   89 |   virtual std::list<SensorMotorInfo> getMotor override Infos()
      |   ^
./abstractrobot.h:89:47: error: only virtual member functions can be marked 'override'
   89 |   virtual std::list<SensorMotorInfo> getMotor override Infos()
      |                                               ^~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [build/./agent.o] Error 1
